--- a/posts-pages.css
+++ b/posts-pages.css
@@ -1,4 +1,6 @@
-/* Alert card home screen starts here */
+/******************************************************************************
+        Alert card home screen starts here
+******************************************************************************/
 .notification_home_header {
   position: -webkit-sticky;
   position: sticky;
@@ -446,10 +448,6 @@
   color: rgba(255, 255, 255, 0.8);
 }
 
-/* Embedded Content
-     ========================================================================= */
-/* Grouping Content
-     ========================================================================= */
 #alertDetailHeader {
   background-color: #f4f4f4;
   width: 100%;
@@ -597,5 +595,169 @@ svg {
 
 /******************************************************************************
         Notification Detail view style ends here
-  ******************************************************************************/
+******************************************************************************/
+/******************************************************************************
+        New Request view style starts here
+******************************************************************************/
+.newRequest_header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  padding: 1rem 1rem 0.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: #f4f4f4;
+  -webkit-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.06);
+          box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.06);
+}
+
+.newRequest_header h2 {
+  margin: 0;
+  line-height: 1.5;
+}
+
+.newRequest_header .sendRequest_btn {
+  background: none;
+}
+
+.requestForm_main {
+  background: #f4f4f4;
+  min-height: 92vh;
+}
+
+.progress_wrapper {
+  padding: 0 1rem 0 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.progress_img {
+  margin-top: 2.25rem;
+  -webkit-transform: translateX(17px);
+          transform: translateX(17px);
+}
+
+.progress_content {
+  padding: 0;
+  -webkit-transform: translate(0, 0);
+          transform: translate(0, 0);
+}
+
+.progress_content li {
+  list-style-type: none;
+  padding: 0.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  color: #bdbdbd;
+}
+
+.progress_content li div:first-of-type {
+  margin-top: 2px;
+}
+
+.reqForm_current span {
+  color: #333333;
+}
+
+.options_wrapper {
+  padding: 0 1rem 1rem;
+}
+
+.options_content {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  grid-gap: 1rem;
+}
+
+.options_content button {
+  padding: 1rem 0;
+  background: white;
+  -webkit-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
+          box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
+  border-radius: 0.5rem;
+}
+
+.options_subject, .options_desciption {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.newReq_subject_submit {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  margin-top: 1rem;
+}
+
+.attachment_options {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  grid-gap: 1rem;
+}
+
+.attachment_options button {
+  padding: 2rem;
+  background-color: #ffffff;
+  -webkit-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
+          box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
+  border-radius: 0.5rem;
+}
+
+.options_attachment {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.options_attachment button {
+  margin-top: 1rem;
+}
+
+#attachments_list {
+  padding: 0;
+  margin: 0.5rem 0 0 0;
+}
+
+#attachments_list li {
+  list-style-type: none;
+  margin-top: 1rem;
+}
+
+/******************************************************************************
+        New Request view style ends here
+******************************************************************************/
 /*# sourceMappingURL=posts-pages.css.map */
