--- a/style.css
+++ b/style.css
@@ -15,6 +15,19 @@ Table of Contents
 
 */
 /* 1. Variables =========================================================== */
+::-webkit-input-placeholder {
+  color: #BDBDBD;
+}
+:-ms-input-placeholder {
+  color: #BDBDBD;
+}
+::-ms-input-placeholder {
+  color: #BDBDBD;
+}
+::placeholder {
+  color: #BDBDBD;
+}
+
 @font-face {
   font-family: futuraMedium;
   src: url(../../../assets/fonts/futura_medium_bt.ttf);
@@ -180,6 +193,7 @@ sup {
    */
 img {
   border-style: none;
+  display: block;
 }
 
 /* Forms
@@ -430,6 +444,27 @@ p {
   font-size: 12px;
 }
 
+.requestForm_main {
+  font-family: SFProDisplayRegular, serif;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.newReq_subject_input {
+  font-family: SFProDisplayRegular, serif;
+  font-size: 18px;
+}
+
+.attachment_btn {
+  font-size: 14px;
+  letter-spacing: 1.25px;
+}
+
+.attachment_options {
+  font-size: 14px;
+  letter-spacing: 1.25px;
+}
+
 .slideshow-container .mySlides h2 {
   text-align: center;
 }
@@ -572,6 +607,7 @@ a {
   width: 100%;
   height: 3.5rem;
   background-color: #454545;
+  z-index: 100;
 }
 
 .app-nav .nav {
@@ -632,8 +668,257 @@ a {
 /******************************************************************************
             Navigation bottom styling ends here
 ******************************************************************************/
+/* 10. Elements ============================================================ */
+.btn_to_login {
+  margin: 0 auto;
+  width: calc(100% - 2rem);
+  /* sign in button */
+}
+
+.btn_to_login button {
+  width: 100%;
+  padding: 0.5rem 0;
+  color: white;
+  border-radius: 1.5rem;
+  background-color: black;
+  margin-top: 5rem;
+}
+
+/* New request button styling */
+#newRequest_btn {
+  position: fixed;
+  bottom: 3.5rem;
+  right: 0;
+}
+
+/* New request booking popup styling */
+.new_req_book_wrapper {
+  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  -webkit-backdrop-filter: blur(0.5rem);
+          backdrop-filter: blur(0.5rem);
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.new_req_book_card {
+  padding: 2rem 1rem;
+  height: 13rem;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 0.5rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 1rem;
+}
+
+.new_req_book_wrapper .new_req_book_card button {
+  background: white;
+  border: 1px solid lightgray;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  font-size: 1.2rem;
+  line-height: 1;
+  font-weight: bold;
+  color: #4f4f4f;
+}
+
+.request_btn_icon,
+.booking_btn_icon {
+  height: 134.77px;
+}
+
+.show_popup {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+button:active,
+button:focus {
+  outline: none;
+}
+
+h1 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #4f4f4f;
+  padding: 0;
+  margin: 0;
+}
+
+.notificationCardTitle,
+.requestTitle {
+  font-size: 1rem;
+  font-weight: 400;
+  margin: 0 0 0.33rem 0;
+  color: #4f4f4f;
+}
+
+.newRequestDate {
+  font-size: 0.875rem;
+  font-weight: 300;
+  margin: 0 0 0.33rem 0;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.newRequestExerpt {
+  font-size: 0.875rem;
+  font-weight: 300;
+  white-space: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  max-height: 2.5rem;
+  line-height: 1.5;
+  margin: 0;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.newRequestStatus {
+  font-size: 0.875rem;
+  font-weight: 600;
+  margin: 0 0 0.33rem 0;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.bookingDate {
+  font-size: 0.875rem;
+  font-weight: 300;
+  margin: 0 0 0.33rem 0;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.bookingTime {
+  font-size: 0.875rem;
+  font-weight: 300;
+  margin: 0;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+/* New Request subject input */
+.newReq_subject_input {
+  width: 100%;
+  padding: 1rem;
+  border-radius: 2rem;
+  border: 1px solid #dcdcd6;
+}
+
+/* New Request description input */
+.newReq_description_input {
+  width: 100%;
+  border-radius: 0.5rem;
+  border: 0;
+  padding: 1rem;
+}
+
+/* New Request attachment button */
+.attachment_btn,
+.newReq_subject_submit,
+#snapPhoto,
+#retake,
+#attachPhoto {
+  background-color: #dcebe9;
+  border: 1px solid #e0e0e0;
+  color: #4f4f4f;
+  border-radius: 2rem;
+  padding: 1rem 2rem;
+}
+
+/* Camera */
+video,
+canvas, #attachments_list li {
+  border: 0.5rem solid lightgray;
+  border-radius: 0.5rem;
+}
+
+.camera_feed,
+.clicked_camera_feed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 12;
+  padding-top: 3rem;
+  background-color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.camera_feed .snap_options,
+.clicked_camera_feed .snap_options {
+  margin-top: 2rem;
+}
+
+.camera_feed .clicked_options,
+.clicked_camera_feed .clicked_options {
+  margin-top: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 2rem;
+}
+
+.camera_feed .clicked_options button,
+.clicked_camera_feed .clicked_options button {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+
+#attachments_list li {
+  position: relative;
+}
+
+#attachments_list li img {
+  position: relative;
+}
+
+#attachments_list li button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0.5rem;
+  background-color: #FFFFFF;
+}
+
 /* 5. Posts and Pages ====================================================== */
-/* Alert card home screen starts here */
+/******************************************************************************
+        Alert card home screen starts here
+******************************************************************************/
 .notification_home_header {
   position: -webkit-sticky;
   position: sticky;
@@ -1081,10 +1366,6 @@ a {
   color: rgba(255, 255, 255, 0.8);
 }
 
-/* Embedded Content
-     ========================================================================= */
-/* Grouping Content
-     ========================================================================= */
 #alertDetailHeader {
   background-color: #f4f4f4;
   width: 100%;
@@ -1232,7 +1513,171 @@ svg {
 
 /******************************************************************************
         Notification Detail view style ends here
-  ******************************************************************************/
+******************************************************************************/
+/******************************************************************************
+        New Request view style starts here
+******************************************************************************/
+.newRequest_header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  padding: 1rem 1rem 0.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: #f4f4f4;
+  -webkit-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.06);
+          box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.06);
+}
+
+.newRequest_header h2 {
+  margin: 0;
+  line-height: 1.5;
+}
+
+.newRequest_header .sendRequest_btn {
+  background: none;
+}
+
+.requestForm_main {
+  background: #f4f4f4;
+  min-height: 92vh;
+}
+
+.progress_wrapper {
+  padding: 0 1rem 0 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.progress_img {
+  margin-top: 2.25rem;
+  -webkit-transform: translateX(17px);
+          transform: translateX(17px);
+}
+
+.progress_content {
+  padding: 0;
+  -webkit-transform: translate(0, 0);
+          transform: translate(0, 0);
+}
+
+.progress_content li {
+  list-style-type: none;
+  padding: 0.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  color: #bdbdbd;
+}
+
+.progress_content li div:first-of-type {
+  margin-top: 2px;
+}
+
+.reqForm_current span {
+  color: #333333;
+}
+
+.options_wrapper {
+  padding: 0 1rem 1rem;
+}
+
+.options_content {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  grid-gap: 1rem;
+}
+
+.options_content button {
+  padding: 1rem 0;
+  background: white;
+  -webkit-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
+          box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
+  border-radius: 0.5rem;
+}
+
+.options_subject, .options_desciption {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.newReq_subject_submit {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  margin-top: 1rem;
+}
+
+.attachment_options {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  grid-gap: 1rem;
+}
+
+.attachment_options button {
+  padding: 2rem;
+  background-color: #ffffff;
+  -webkit-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
+          box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
+  border-radius: 0.5rem;
+}
+
+.options_attachment {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.options_attachment button {
+  margin-top: 1rem;
+}
+
+#attachments_list {
+  padding: 0;
+  margin: 0.5rem 0 0 0;
+}
+
+#attachments_list li {
+  list-style-type: none;
+  margin-top: 1rem;
+}
+
+/******************************************************************************
+        New Request view style ends here
+******************************************************************************/
 /* 6. Media ================================================================ */
 img {
   max-width: 100%;
@@ -1305,154 +1750,6 @@ img {
 
 .hidden {
   display: none;
-}
-
-/* 10. Elements ============================================================= */
-.btn_to_login {
-  margin: 0 auto;
-  width: calc(100% - 2rem);
-  /* sign in button */
-}
-
-.btn_to_login button {
-  width: 100%;
-  padding: 0.5rem 0;
-  color: white;
-  border-radius: 1.5rem;
-  background-color: black;
-  margin-top: 5rem;
-}
-
-/* New request button styling */
-#newRequest_btn {
-  position: fixed;
-  bottom: 3.5rem;
-  right: 0;
-}
-
-/* New request booking popup styling */
-.new_req_book_wrapper {
-  display: none;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  z-index: 100;
-  top: 0;
-  left: 0;
-  -webkit-backdrop-filter: blur(0.5rem);
-          backdrop-filter: blur(0.5rem);
-  background-color: rgba(0, 0, 0, 0.6);
-}
-
-.new_req_book_card {
-  padding: 2rem 1rem;
-  height: 13rem;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: white;
-  border-radius: 1rem;
-}
-
-.new_req_book_wrapper .new_req_book_card button {
-  background: white;
-  border: 1px solid lightgray;
-  padding: 1rem 4rem;
-  border-radius: 2rem;
-  font-size: 1.2rem;
-  line-height: 1;
-  font-weight: bold;
-  color: white;
-  background-color: #444;
-}
-
-.show_popup {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-button:active,
-button:focus {
-  outline: none;
-}
-
-h1 {
-  font-size: 1.5rem;
-  font-weight: 500;
-  color: #4f4f4f;
-  padding: 0;
-  margin: 0;
-}
-
-.notificationCardTitle,
-.requestTitle {
-  font-size: 1rem;
-  font-weight: 400;
-  margin: 0 0 0.33rem 0;
-  color: #4f4f4f;
-}
-
-.newRequestDate {
-  font-size: 0.875rem;
-  font-weight: 300;
-  margin: 0 0 0.33rem 0;
-  color: rgba(0, 0, 0, 0.4);
-}
-
-.newRequestExerpt {
-  font-size: 0.875rem;
-  font-weight: 300;
-  white-space: normal;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  max-height: 2.5rem;
-  line-height: 1.5;
-  margin: 0;
-  color: rgba(0, 0, 0, 0.8);
-}
-
-.newRequestStatus {
-  font-size: 0.875rem;
-  font-weight: 600;
-  margin: 0 0 0.33rem 0;
-  color: rgba(0, 0, 0, 0.4);
-}
-
-.bookingDate {
-  font-size: 0.875rem;
-  font-weight: 300;
-  margin: 0 0 0.33rem 0;
-  color: rgba(0, 0, 0, 0.4);
-}
-
-.bookingTime {
-  font-size: 0.875rem;
-  font-weight: 300;
-  margin: 0;
-  color: rgba(0, 0, 0, 0.4);
 }
 
 /* 11. hacks =============================================================== */
