--- a/assets/css/tenexbox.css
+++ b/assets/css/tenexbox.css
@@ -2,7 +2,7 @@
    ========================================================================= */
 
 * {
-    font-family: "roboto", sans-serif;
+    font-family: "SFProDisplayRegular", "roboto", sans-serif;
     box-sizing: border-box;
 }
 
@@ -10,9 +10,10 @@
    ========================================================================= */
 
 h1 {
+    font-family: "futura";
     font-size: 1.5rem;
     font-weight: 500;
-    color: #4F4F4F;
+    color: #333333;
     padding: 0;
     margin: 1rem 0;
 }
@@ -27,18 +28,18 @@ h2 {
 
 h3 {
     font-size: 1rem;
-    font-weight: 300;
-    color: rgba(0, 0, 0, 0.45);
-    padding: 0 1rem;
-    margin: 0.75rem 0;
+    font-weight: 500;
 }
 
-.requestTitle {
-    font-size: 1rem;
-    font-weight: 400;
-    margin: 0 0 0.33rem 0;
-    padding: 0;
-    color: #4F4F4F;
+.newRequestCard_title {
+    margin: 0;
+    overflow: hidden;
+    display: -webkit-box;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    white-space: pre-line;
+    color: #333333;
 }
 
 .newRequestDate {
@@ -70,6 +71,54 @@ h3 {
     color: rgba(0, 0, 0, 0.4)
 }
 
+.newBookingCard_time_wrapper p {
+    margin: 0;
+}
+
+.newBookingCard_time {
+    font-size: 0.875rem;
+    font-weight: 400;
+    color: #4f4f4f;
+}
+
+.newBookingCard_date_for {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 0.9;
+    color: #4980C1;
+}
+
+.newBookingCard_date_for::first-line {
+    font-size: 12px;
+}
+
+.newRequestCard_status {
+    font-size: 0.75rem;
+    color: #4f4f4f;
+}
+
+.newRequestCard_date_wrapper p {
+    font-size: 0.75rem;
+    color: #4f4f4f;
+    line-height: 1.25;
+    text-transform: uppercase;
+}
+
+.newRequestCard_excerpt {
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color:#4f4f4f;
+}
+
+.rejected {
+    color: #BE0707;
+}
+
+.cancelledText {
+    color: #BDBDBD !important;
+}
+
 .bookingDate {
     font-size: 0.875rem;
     font-weight: 300;
@@ -92,7 +141,7 @@ h3 {
    ========================================================================= */
 
 body {
-    background-color: #E8E8E8;
+    background-color: #f4f4f4;
     margin: 0;
 }
 
@@ -100,9 +149,10 @@ header {
     background-color: #f4f4f4;
     width: 100%;
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.06);
-    position: fixed;
+    position: sticky;
     top: 0;
     padding: 2rem 1rem 1rem 1rem;
+    z-index: 100;
 }
 
 .topHeader {
@@ -180,7 +230,7 @@ svg {
 
 .textFilter_btn {
     height: 32px;
-    padding: 0 1rem;
+    padding: 0 0.75rem;
     margin-right: 0.25rem;
     border-radius: 32px;
     border: 1px solid rgba(170, 170, 170, 0.25);
@@ -202,17 +252,131 @@ svg {
     fill: white;
 }
 
-main {
-    margin-top: 10.75rem;
+.newRequestCard {
+    z-index: 1;
+    background-color: #ffffff;
+    width: 100%;
+    height: 8.125rem;
+    padding: 1rem;
+    margin: 1rem 0 0 0;
+    border-radius: 0.5rem;
+    -webkit-box-shadow: 2px 2px 4px rgb(0 0 0 / 12%);
+    box-shadow: 2px 2px 4px rgb(0 0 0 / 12%);
 }
 
-.newRequestCard {
-    background-color: white;
+.newRequestCard_wrapper {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: auto auto;
+    grid-template-columns: auto auto;
+    grid-gap: 0.25rem;
+}
+
+.newRequestCard_content_wrapper {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 0.5rem auto;
+    grid-template-columns: 0.5rem auto;
+    grid-gap: 0.5rem 1rem;
     width: 100%;
-    margin-bottom: 0.5rem;
-    padding: 1rem;
-    border-radius: 0.5rem;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
+}
+
+.newBookingCard_status_progress_wrapper {
+    width: 8px;
+    height: 80px;
+    background-color: #4980C1;
+    border-radius: 10px;
+}
+
+.newRequestCard_status_progress_wrapper {
+    width: 8px;
+    height: 80px;
+    background-color: #FDAE46;
+    border-radius: 10px;
+}
+
+.newRequestCard_status_progress_rejected_wrapper {
+    width: 8px;
+    height: 80px;
+    background-color: #BE0707;
+    border-radius: 10px;
+}
+
+.newRequestCard_status_draft_progress_wrapper {
+    width: 8px;
+    height: 80px;
+    background-color: #FDAE46;
+    opacity: 0.35;
+    border-radius: 10px;
+}
+
+.cancelled_progress {
+    background-color: #BDBDBD;
+}
+
+.cancelledIcon {
+    fill: #BDBDBD;
+}
+
+.newRequestCard_details {
+    display: block;
+}
+
+.newBookingCard_time_wrapper {
+    padding: 0.25rem 0.5rem;
+    margin-top: 0.5rem;
+    border-radius: 1rem;
+    background-color: rgba(189, 189, 189, 0.25);
+    max-width: -webkit-max-content;
+    max-width: -moz-max-content;
+    max-width: max-content;
+}
+
+.newBookingCard_time_wrapper p svg {
+    margin-bottom: -3px;
+}
+
+.newRequestCard_date_wrapper {
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: column nowrap;
+    flex-flow: column nowrap;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: flex-end;
+}
+
+.newBookingCard_date_for {
+    transform: translate(-15px, -56px);
+    text-align: center;
+    height: 0;
+}
+
+.newRequestCard_status {
+    margin: 0;
+    grid-column: 1 / -1;
+}
+
+.newRequestCard_date_wrapper p {
+    text-align: right;
+    margin: 0;
+}
+
+.newRequestCard_excerpt {
+    margin: 0.5rem 0 0 0;
+    overflow: hidden;
+    display: -webkit-box;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    white-space: pre-line;
 }
 
 .hidden {
@@ -233,6 +397,7 @@ button:focus {
     width: 100%;
     height: 3.5rem;
     background-color: #454545;
+    z-index: 100;
   }
   
   .app-nav .nav {
